# vault-sync

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  justfile
.github/templates/: homebrew-formula.rb
.github/workflows/: build.yml  release.yml
src/: config.rs  main.rs  reporter.rs  styles.rs  update.rs  upgrade.rs
