[package]
name = "dusk-warden"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
anyhow = "1"
ureq = { version = "3", features = ["json"] }
self-replace = "1"
flate2 = "1"
tar = "0.4"

[profile.release]
strip = true
lto = true
