[package]
name = "vault-sync"
version = "0.5.5"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
anyhow = "1"
minijinja = "2"
ureq = { version = "3", features = ["json"] }
self-replace = "1"
flate2 = "1"
tar = "0.4"
owo-colors = { version = "4", features = ["supports-colors"] }
console = "0.16"
rayon = "1"

[profile.release]
strip = true
lto = true
